--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "@storybook/addon-links": "^6.5.9",
     "@storybook/builder-vite": "^0.1.36",
     "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/react": "^13.3.0",
     "@types/arcgis-js-api": "^4.24.0",
     "@vitejs/plugin-react": "^1.3.2",
     "babel-loader": "^8.2.5",
@@ -87,6 +87,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.18",
     "sass": "^1.32.4",
