--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -43,6 +43,7 @@
   },
   "peerDependencies": {
     "bootstrap": "^4.5.3",
+    "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
