--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -40,7 +40,8 @@
     "lodash.throttle": "^4.1.1"
   },
   "peerDependencies": {
-    "@arcgis/core": "^4.0.0",
+    "@arcgis/core": "^4.18.0",
+    "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
