--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -49,8 +49,9 @@
     "reactstrap": "^8.8.1"
   },
   "peerDependencies": {
-    "@arcgis/core": "^4.0.0",
+    "@arcgis/core": "^4.18.0",
     "bootstrap": "^4.5.3",
+    "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
