--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -33,7 +33,8 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "peerDependencies": {
-    "@arcgis/core": "^4.0.0",
+    "@arcgis/core": "^4.18.0",
+    "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
